--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 entityisfun/entityisfun/bin/Debug/
 entityisfun/entityisfun/obj/Debug/
+entityisfun/Zadania DB/bin/Debug/Zadania DB.exe.config
+entityisfun/Zadania DB/obj/
